src/tests/snapshots/hebi__tests__native_fn__call_simple.snap
---
source: src/tests/native_fn.rs
expression: snapshot
---
# Modules:


# Input:
print simple()


# Result (success):
none

# Stdout:
test


