src/tests/snapshots/hebi__tests__native_fn__call_with_pos_missing_args.snap
---
source: src/tests/native_fn.rs
expression: snapshot
---
# Modules:

            
# Input:
print with_pos()


# Result (error):
missing required positional params: v

# Stdout:


